# iluvatar

./: Cargo.toml  cketh_minter.did  dfx.json
src/: address.rs  assets.rs  dashboard.rs  deposit.rs  endpoints.rs  eth_rpc.rs  generator.rs  lib.rs  lifecycle.rs  main.rs  memo.rs  mint.rs  state.rs  storage.rs  tests.rs
src/address/: tests.rs
src/dashboard/: tests.rs
src/eth_logs/: mod.rs
src/eth_rpc_client/: mod.rs  providers.rs  responses.rs  tests.rs
src/eth_rpc_error/: mod.rs
src/guard/: mod.rs  tests.rs
src/lifecycle/: init.rs  tests.rs  upgrade.rs
src/memo/: tests.rs
src/numeric/: mod.rs
src/state/: audit.rs  event.rs  tests.rs
templates/: dashboard.html
tests/: tests.rs
