[package]
name = "ic-cketh-minter"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ic-cketh-minter"
path = "src/main.rs"

[dependencies]
hex = "0.4"
hex-literal = "0.4.1"
ic-canister-log = "0.2.0"
ic-canisters-http-types = { git="https://github.com/dfinity/ic"}
ic-crypto-ecdsa-secp256k1 = { git="https://github.com/dfinity/ic" }
ic-crypto-sha3 = { git="https://github.com/dfinity/ic" }
ic-ic00-types = { git="https://github.com/dfinity/ic" }
icrc-ledger-client-cdk = { git="https://github.com/dfinity/ic" }
ic-metrics-encoder = "1"
ic-utils-ensure = { git="https://github.com/dfinity/ic" }
icrc-ledger-types = { git="https://github.com/dfinity/ic" }
num-bigint = "0.4.3"
num-traits = "0.2.14"
phantom_newtype = { git="https://github.com/dfinity/ic" }
ic-crypto-getrandom-for-wasm = { git="https://github.com/dfinity/ic" } # apparently this is needed, otherwise the build will fail
rlp = "0.5.2"
thiserror = "1.0"
thousands = "0.2"
askama = "0.12.1"
candid = "0.9.10"
ethnum = { version = "1.3.2", features = ["serde"] }
futures = "0.3.29"
ic-cdk = "0.10.0"
ic-cdk-macros = "0.7.0"
ic-cdk-timers = "0.4.0"
ic-stable-structures = "0.5.4"
minicbor = { version = "0.19.1", features = ["alloc", "derive"] }
minicbor-derive = "0.13.0"
serde = "1.0.193"
serde_bytes = "0.11.12"
serde_json = "1.0.108"
strum = "0.25.0"
strum_macros = "0.25.3"
time = "0.3.30"

[dev-dependencies]
assert_matches = "1.5.0"
ethers-core = "2.0.8"
ic-base-types = { git="https://github.com/dfinity/ic" }
ic-config = { git="https://github.com/dfinity/ic" }
ic-crypto-test-utils-reproducible-rng = { git="https://github.com/dfinity/ic" }
ic-icrc1-ledger = { git="https://github.com/dfinity/ic" }
ic-state-machine-tests = { git="https://github.com/dfinity/ic" }
ic-test-utilities-load-wasm = { git="https://github.com/dfinity/ic" }
maplit = "1"
proptest = "1.0"
rand = "0.8"
scraper = "0.17.1"
